syntax = "proto3";

package product;

service ProductService {
  rpc AddProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock_quantity = 5;
}

message ProductResponse {
  string message = 1;
}
